...
                }
                .padding(.vertical, 8)
                Button {
                    coordinator.showWeatherDetails()
                    weatherDetailsVM.units = selectedUnit
                } label: {
                    Text("Show Historical Weather")
                        .font(.title3)
                        .fontWeight(.bold)
                        .foregroundColor(.white)
                        .padding(.horizontal, 40)
                        .padding(.vertical, 14)
                        .background(
...
// Use this preview only for design, not for navigation testing
#Preview {
    WeatherSummaryView(
        weatherSummaryVM: WeatherSummaryViewModel(
            latitude: 37.77,
            longitude: -122.42,
            city: "San Francisco, CA",
            serviceManager: NetworkManager()
        ),
        weatherDetailsVM: WeatherDetailsViewModel(
            serviceManager: NetworkManager(),
            latitude: 37.77,
            longitude: -122.42,
...
